WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142197
SpeculativeJIT::emitAllocateArguments() should be a bit faster, and shouldn't do destructor initialization
https://bugs.webkit.org/show_bug.cgi?id=142197
Summary
SpeculativeJIT::emitAllocateArguments() should be a bit faster, and shouldn't...
Filip Pizlo
Reported
2015-03-02 16:28:35 PST
Patch forthcoming.
Attachments
the patch
(2.98 KB, patch)
2015-03-02 16:33 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-03-02 16:33:45 PST
Created
attachment 247717
[details]
the patch
Geoffrey Garen
Comment 2
2015-03-02 16:36:16 PST
Comment on
attachment 247717
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=247717&action=review
r=me
> Source/JavaScriptCore/ChangeLog:9 > + (JSC::DFG::SpeculativeJIT::emitAllocateArguments): Use shift instead of mul, since mul doesn't automatically strength-reduce to shift. Also lass the structure as a TrustedImmPtr.
lass => pass
Filip Pizlo
Comment 3
2015-03-02 16:46:33 PST
Landed in
http://trac.webkit.org/changeset/180909
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug