SpeculativeJIT::emitAllocateArguments() should be a bit faster, and shouldn't do destructor initialization https://bugs.webkit.org/show_bug.cgi?id=142197

Reviewed by Geoffrey Garen.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::emitAllocateArguments): Use shift instead of mul, since mul doesn't automatically strength-reduce to shift. Also pass the structure as a TrustedImmPtr.
* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::emitAllocateVariableSizedJSObject): Rationalize this a bit. The other emitAllocate... methods take a templated structure so that it can be either a TrustedImmPtr or a register. Also don't do destructor initialization, since its one client doesn't need it, and it's actually probably wrong.



Canonical link: https://commits.webkit.org/160240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180909 268f45cc-cd09-0410-ab3c-d52691b4dbfc